# rag-shop-assistant-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/database/: config.py  init_db.py  models.py
backend/routes/: chat.py  products.py
backend/services/: gemini_chain.py  vector_store.py
data/: data_insertion.py  download_dataset.py
embeddings/: sync_pinecone.py
frontend/: ui.py
